--- a/src/App.scss
+++ b/src/App.scss
@@ -124,6 +124,20 @@
         height: 15px;
         color: var(--gray-color);
       }
+
+      a{
+        color: var(--gray-color);
+        text-decoration: none;
+        flex-direction: column;
+        text-transform: uppercase;
+
+        font-weight: 500;
+        transition: all 0.3s ease-in-out;
+
+        &:hover{
+            color: var(--secondary-color);
+        }
+    }
   
       &:hover {
         background-color: var(--secondary-color);
